--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
+# Created by .ignore support plugin (hsz.mobi)
+### Java template
+*.class
+.idea
+build/
+.gradle
+
