--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ after_success:
   - git config user.email "{GH_USER_EMAIL}"
   - git add -A . 
   - git commit -m "Deploy to GitHub Pages ${TRAVIS_BUILD_NUMBER}"
+  #- git commit -m "Deploy to GitHub Pages"
   - git push --quiet origin master > /dev/null 2>&1
 
 branches:
